limit skilltree ID input on properties page too

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,19 +14,19 @@
 
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ADD_SKILLTREE": "Add Skilltree",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ENTER_NAME": "Please enter a name.",
-  "COMPONENTS__SKILLTREE_ADD_DIALOG__INPUT_NAME": "Skilltree Name",
+  "COMPONENTS__SKILLTREE_ADD_DIALOG__INPUT_NAME": "Skilltree ID",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__BUTTON_ADD": "Add",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this name.",
-  "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_REQUIRED": "Please enter a skilltree name.",
-  "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_INVALID_ID": "Please enter a valid skilltree name.",
+  "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_REQUIRED": "Please enter a skilltree ID.",
+  "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_INVALID_ID": "Please enter a valid skilltree ID.",
 
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DUPLICATE_SKILLTREE": "Duplicate Skilltree",
-  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ENTER_NAME": "Please enter the name of the duplicate.",
-  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__NAME": "Duplicate Name",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ENTER_NAME": "Please enter the ID of the duplicate.",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__NAME": "Duplicate ID",
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DONE": "Done",
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this name.",
-  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_REQUIRE": "Please enter a valid skilltree name.",
-  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_INVALID_ID": "Please enter a valid skilltree name.",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_REQUIRE": "Please enter a valid skilltree ID.",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_INVALID_ID": "Please enter a valid skilltree ID.",
 
   "COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR": "Skill Editor",
   "COMPONENTS__SKILLTREE_EDITOR__PROPERTIES": "Properties",
@@ -64,13 +64,13 @@
   "COMPONENTS__SKILLTREE_LIST__COPY_SUCCESS": "{{old}} was copied successfully to {{new}}.",
   "COMPONENTS__SKILLTREE_LIST__SKILLTREE": "Skilltree",
 
-  "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_DUPLICATE": "There is already a skilltree with this name.",
-  "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_REQUIRED": "Please enter a skilltree name.",
-  "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_NO_WHITESPACES": "Whitespaces are not allowed.",
+  "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_DUPLICATE": "There is already a skilltree with this ID.",
+  "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_REQUIRED": "Please enter a skilltree ID.",
+  "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_INVALID": "Please enter a valid skilltree ID.",
   "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_NO_NUMBER": "Please enter a valid number.",
   "COMPONENTS__SKILLTREE_PROPERTIES__SKILLTREE": "Skilltree",
   "COMPONENTS__SKILLTREE_PROPERTIES__DISPLAY_NAME": "Display Name",
-  "COMPONENTS__SKILLTREE_PROPERTIES__SKILLTREE_NAME": "Skilltree Name",
+  "COMPONENTS__SKILLTREE_PROPERTIES__SKILLTREE_ID": "Skilltree ID",
   "COMPONENTS__SKILLTREE_PROPERTIES__DESCRIPTION": "Description",
   "COMPONENTS__SKILLTREE_PROPERTIES__SELECT_MOB_TYPE": "Select Mobtype",
   "COMPONENTS__SKILLTREE_PROPERTIES__MAX_LEVEL": "Maximum pet level",
