--- a/src/assets/i18n/xx.json
+++ b/src/assets/i18n/xx.json
@@ -279,6 +279,7 @@
   "LEVEL_RULE_EVERY_X_LEVEL_START": "XXX {{level}} XXX {{start}}",
   "LEVEL_RULE_EVERY_X_LEVEL_START_END": "XXX {{level}} XXX {{start}} XXX {{end}}",
 
+  "EFFECT__CHANGE_LANGUAGE": "XXX {{lang}}",
   "EFFECT__IMPORT_SKILLTREE__IMPORT": "XXX",
   "EFFECT__IMPORT_SKILLTREE_FAILED__INVALID": "XXX",
   "EFFECT__IMPORT_SKILLTREE_FAILED__DUPLICATE": "XXX {{id}}",
