fix i18n keys for the about page

--- a/src/assets/i18n/xx.json
+++ b/src/assets/i18n/xx.json
@@ -1,8 +1,8 @@
 {
   "COMPONENTS__NOT_YET_IMPLEMENTED": "XXX",
 
-  "COMPONENTS__ABOUT": "XXX",
-  "COMPONENTS__LIBRARIES": "XXX",
+  "COMPONENTS__ABOUT__ABOUT": "XXX",
+  "COMPONENTS__ABOUT__LIBRARIES": "XXX",
 
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__TITLE": "XXX",
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__ALL": "XXX",
