add german translation remove XXX translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,7 +16,7 @@
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ENTER_NAME": "Please enter a name.",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__INPUT_NAME": "Skilltree ID",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__BUTTON_ADD": "Add",
-  "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this name.",
+  "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this ID.",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_REQUIRED": "Please enter a skilltree ID.",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_INVALID_ID": "Please enter a valid skilltree ID.",
 
@@ -24,7 +24,7 @@
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ENTER_NAME": "Please enter the ID of the duplicate.",
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__NAME": "Duplicate ID",
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DONE": "Done",
-  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this name.",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this ID.",
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_REQUIRE": "Please enter a valid skilltree ID.",
   "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_INVALID_ID": "Please enter a valid skilltree ID.",
 
@@ -139,8 +139,8 @@
   "COMPONENTS__SKILLS__FIRE__DURATION_SUFFIX": "sec",
   "COMPONENTS__SKILLS__FIRE__DURATION_POPUP": "<p>The duration the target will be on fire.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__HEAL__TIMER": "Timer",
-  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_PREFIX": "Heal every",
-  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_SUFFIX": "seconds",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_PREFIX": "Heal every ",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_SUFFIX": "sec",
   "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_POPUP": "<p>The time between healing.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__HEAL__HEALTH": "Added Health",
   "COMPONENTS__SKILLS__HEAL__HEALTH_PREFIX": "",
@@ -259,13 +259,13 @@
   "COMPONENTS__SKILLS__BEACON__BUFF__ABSORPTION": "Absorbtion",
   "COMPONENTS__SKILLS__RANGED__RATE": "Rate of fire",
   "COMPONENTS__SKILLS__RANGED__RATE_PREFIX": "",
-  "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms delay  shots/second",
+  "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms delay = shots/second",
   "COMPONENTS__SKILLS__RANGED__RATE_POPUP": "<p>The rate at which the pet will shot.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RANGED__DAMAGE": "Damage",
   "COMPONENTS__SKILLS__RANGED__DAMAGE_PREFIX": "",
   "COMPONENTS__SKILLS__RANGED__DAMAGE_SUFFIX": "damage",
   "COMPONENTS__SKILLS__RANGED__DAMAGE_POPUP": "<p>The damage the pet will deal with ranged attacks.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
-  "COMPONENTS__SKILLS__RANGED__PROJECTILE": "PROJECTILE",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE": "Projectile",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__EGG": "Egg",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__WITHER_SKULL": "Wither Skull",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__LARGE_FIREBALL": "Large Fireball",
@@ -312,9 +312,9 @@
   "MOB_TYPE__HORSE": "Horse",
   "MOB_TYPE__HUSK": "Husk",
   "MOB_TYPE__ILLUSIONER": "Illusioner",
-  "MOB_TYPE__IRONGOLEM": "IronGolem",
+  "MOB_TYPE__IRONGOLEM": "Iron Golem",
   "MOB_TYPE__LLAMA": "Llama",
-  "MOB_TYPE__MAGMACUBE": "MagmaCube",
+  "MOB_TYPE__MAGMACUBE": "Magma Cube",
   "MOB_TYPE__MOOSHROOM": "Mooshroom",
   "MOB_TYPE__MULE": "Mule",
   "MOB_TYPE__OCELOT": "Ocelot",
