--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,6 +75,7 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__SELECT_MOB_TYPE": "Select Mobtype",
   "COMPONENTS__SKILLTREE_PROPERTIES__MAX_LEVEL": "Maximum pet level",
   "COMPONENTS__SKILLTREE_PROPERTIES__REQUIRED_LEVEL": "Required pet level",
+  "COMPONENTS__SKILLTREE_PROPERTIES__ICON": "Icon",
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION": "Copy permission to clipboard",
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION_DONE": "Permission copied!",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION": "Permission",
@@ -294,6 +295,9 @@
   "EFFECT__SAVE_SKILLTREE_FAILED__ERROR": "Error",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} was renamed to {{new}}",
   "EFFECT__RENAME_SKILLTREE__SKILLTREE": "Skilltree",
+
+  "DIRECTIVES__SKILLTREE_ICON_CHECK__ERROR__DATA": "Invalid item data.",
+  "DIRECTIVES__SKILLTREE_ICON_CHECK__ERROR__NBT": "Invalid NBT data.",
 
   "MOB_TYPE__BAT": "Bat",
   "MOB_TYPE__BLAZE": "Blaze",
