change the way icons are stored/edited import the icon from legacy skilltrees

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,7 +75,7 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__SELECT_MOB_TYPE": "Select Mobtype",
   "COMPONENTS__SKILLTREE_PROPERTIES__MAX_LEVEL": "Maximum pet level",
   "COMPONENTS__SKILLTREE_PROPERTIES__REQUIRED_LEVEL": "Required pet level",
-  "COMPONENTS__SKILLTREE_PROPERTIES__ICON": "Icon",
+  "COMPONENTS__SKILLTREE_PROPERTIES__CHANGE_ICON": "Change Icon",
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION": "Copy permission to clipboard",
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION_DONE": "Permission copied!",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION": "Permission",
@@ -108,6 +108,12 @@
   "COMPONENTS__UPGRADE_ADD_DIALOG__FIXED": "Fixed",
   "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "There is already a rule with these values.",
   "COMPONENTS__UPGRADE_ADD_DIALOG__UPGRADE": "Upgrade",
+
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__TITLE": "Change Skilltree Icon",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__MATERIAL": "Material",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DATA": "Data value",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__GLOWING": "Is item glowing?",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DONE": "Done",
 
   "COMPONENTS__SKILLS__DELETE": "Delete",
   "COMPONENTS__SKILLS__YES": "Yes",
@@ -295,9 +301,6 @@
   "EFFECT__SAVE_SKILLTREE_FAILED__ERROR": "Error",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} was renamed to {{new}}",
   "EFFECT__RENAME_SKILLTREE__SKILLTREE": "Skilltree",
-
-  "DIRECTIVES__SKILLTREE_ICON_CHECK__ERROR__DATA": "Invalid item data.",
-  "DIRECTIVES__SKILLTREE_ICON_CHECK__ERROR__NBT": "Invalid NBT data.",
 
   "MOB_TYPE__BAT": "Bat",
   "MOB_TYPE__BLAZE": "Blaze",
