--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -75,7 +75,7 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__SELECT_MOB_TYPE": "Mobtypen wählen",
   "COMPONENTS__SKILLTREE_PROPERTIES__MAX_LEVEL": "Maximales Pet Level",
   "COMPONENTS__SKILLTREE_PROPERTIES__REQUIRED_LEVEL": "Benötigtes Pet Level",
-  "COMPONENTS__SKILLTREE_PROPERTIES__ICON": "Icon",
+  "COMPONENTS__SKILLTREE_PROPERTIES__CHANGE_ICON": "Icon anpassen",
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION": "Permission in Zwischenablage kopieren",
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION_DONE": "Permission kopiert!",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION": "Permission",
@@ -108,6 +108,12 @@
   "COMPONENTS__UPGRADE_ADD_DIALOG__FIXED": "Fest",
   "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "Es gibt bereits eine Regel mit diesen Werten.",
   "COMPONENTS__UPGRADE_ADD_DIALOG__UPGRADE": "Upgrade",
+
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__TITLE": "Skilltree-Icon anpassen",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__MATERIAL": "Material",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DATA": "Datenwert",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__GLOWING": "Schimmerndt Item?",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DONE": "Fertig",
 
   "COMPONENTS__SKILLS__DELETE": "Löschen",
   "COMPONENTS__SKILLS__YES": "Ja",
@@ -273,9 +279,6 @@
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__FIREBALL": "Feuerball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__SNOWBALL": "Schneeball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__ARROW": "Pfeil",
-
-  "DIRECTIVES__SKILLTREE_ICON_CHECK__ERROR__DATA": "Ungültiger Item Datenwerte.",
-  "DIRECTIVES__SKILLTREE_ICON_CHECK__ERROR__NBT": "Ungültiger NBT Wert.",
 
   "LEVEL_RULE_EXACT": "Level: {{levels}}",
   "LEVEL_RULE_EVERY_LEVEL": "Jedes Level",
