add levelup notifications

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -30,6 +30,7 @@
 
   "COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR": "Skill-Editor",
   "COMPONENTS__SKILLTREE_EDITOR__PROPERTIES": "Eigenschaften",
+  "COMPONENTS__SKILLTREE_EDITOR__LEVELUP_NOTIFICATIONS": "Benachrichtigungen",
 
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__TITLE": "Skilltree-Import",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__INSTRUCTIONS": "Bitte wähle eine Skilltree-Datei (.json)",
@@ -109,11 +110,30 @@
   "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "Es gibt bereits eine Regel mit diesen Werten.",
   "COMPONENTS__UPGRADE_ADD_DIALOG__UPGRADE": "Upgrade",
 
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ADD_UPGRADE": "Upgrade hinzufügen",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__LEVEL": "Level",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__LEVELS": "Level (Leerzeichen/Komma separiert)",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__EVERY": "Jedes",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__START_LEVEL": "Starte bei Level",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__UNTIL_LEVEL": "Bis Level",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ADD": "Hinzufügen",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__OPTIONAL": "(Optional)",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__REQUIRED": "(Benötigt)",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__DYNAMIC": "Dynamisch",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__FIXED": "Fest",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ERROR_RULE_DUPLICATED": "Es gibt bereits eine Regel mit diesen Werten.",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__UPGRADE": "Upgrade",
+
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__TITLE": "Skilltree-Icon anpassen",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__MATERIAL": "Material",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DATA": "Datenwert",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__GLOWING": "Schimmerndt Item?",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DONE": "Fertig",
+
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__ADD_NOTIFICATION": "Benachrichtigung hinzufügen",
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__MESSAGE": "Nachricht",
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__DELETE": "Löschen",
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__INFO": "<p><span class=\"bold\">{{owner}}</span> wird mit dem Namen des Besitzers ersetzt.<br><span class=\"bold\">{{pet}}</span> wird mit dem Namen des Pet ersetzt.<br><span class=\"bold\">{{level}}</span> wird mit dem erreichten Level des Pets ersetzt.</p>",
 
   "COMPONENTS__SKILLS__DELETE": "Löschen",
   "COMPONENTS__SKILLS__YES": "Ja",
