--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,6 +30,7 @@
 
   "COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR": "Skill Editor",
   "COMPONENTS__SKILLTREE_EDITOR__PROPERTIES": "Properties",
+  "COMPONENTS__SKILLTREE_EDITOR__LEVELUP_NOTIFICATIONS": "Notifications",
 
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__TITLE": "Import Skilltree",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__INSTRUCTIONS": "Select a Skilltree-File (.json)",
@@ -109,11 +110,30 @@
   "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "There is already a rule with these values.",
   "COMPONENTS__UPGRADE_ADD_DIALOG__UPGRADE": "Upgrade",
 
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ADD_UPGRADE": "Add Upgrade",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__LEVEL": "Level",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__LEVELS": "Levels (space/comma seperated)",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__EVERY": "Every",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__START_LEVEL": "Start from level",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__UNTIL_LEVEL": "Until level",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ADD": "Add",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__OPTIONAL": "(Optional)",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__REQUIRED": "(Required)",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__DYNAMIC": "Dynamic",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__FIXED": "Fixed",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ERROR_RULE_DUPLICATED": "There is already a rule with these values.",
+  "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__UPGRADE": "Upgrade",
+
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__TITLE": "Change Skilltree Icon",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__MATERIAL": "Material",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DATA": "Data value",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__GLOWING": "Is item glowing?",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DONE": "Done",
+
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__ADD_NOTIFICATION": "Add notification",
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__MESSAGE": "Message",
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__DELETE": "Delete",
+  "COMPONENTS__LEVELUP_NOTIFICATIONS__INFO": "<p><span class=\"bold\">{{owner}}</span> will be replaced by the name of the owner.<br><span class=\"bold\">{{pet}}</span> will be replaced by the name of the pet.<br><span class=\"bold\">{{level}}</span> will be replaced by the new level of the pet.</p>",
 
   "COMPONENTS__SKILLS__DELETE": "Delete",
   "COMPONENTS__SKILLS__YES": "Yes",
