add missing mob (chicken)

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -325,6 +325,7 @@
   "MOB_TYPE__BAT": "Fledermaus",
   "MOB_TYPE__BLAZE": "Lohe",
   "MOB_TYPE__CAVESPIDER": "Höhlenspinne",
+  "MOB_TYPE__CHICKEN": "Huhn",
   "MOB_TYPE__COW": "Kuh",
   "MOB_TYPE__CREEPER": "Creeper",
   "MOB_TYPE__DONKEY": "Maultier",
