--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -325,6 +325,7 @@
   "MOB_TYPE__BAT": "Bat",
   "MOB_TYPE__BLAZE": "Blaze",
   "MOB_TYPE__CAVESPIDER": "Cave Spider",
+  "MOB_TYPE__CHICKEN": "Chicken",
   "MOB_TYPE__COW": "Cow",
   "MOB_TYPE__CREEPER": "Creeper",
   "MOB_TYPE__DONKEY": "Donkey",
