--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -243,6 +243,7 @@
   "COMPONENTS__SKILLS__PICKUP__RANGE_POPUP": "<p>Die Reichweite, in der das Pet Gegenstände/Erfahrungspunkte aufhebt.<br>Format: [+-][Nummer]<br>Beispiele:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__PICKUP__EXP": "Kann Erfahrungspunkte aufheben?",
   "COMPONENTS__SKILLS__SPRINT__ACTIVE": "Aktiv?",
+  "COMPONENTS__SKILLS__RIDE__ACTIVE": "Aktiv?",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN": "Flugdauerregenerierungsrate",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_PREFIX": "",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "Meter/Tick",
