fix typo in german translation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -127,7 +127,7 @@
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__TITLE": "Skilltree-Icon anpassen",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__MATERIAL": "Material",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DATA": "Datenwert",
-  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__GLOWING": "Schimmerndt Item?",
+  "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__GLOWING": "Schimmert Item?",
   "COMPONENTS__SKILLTREE_CHANGE_ICON_DIALOG__DONE": "Fertig",
 
   "COMPONENTS__LEVELUP_NOTIFICATIONS__ADD_NOTIFICATION": "Benachrichtigung hinzufügen",
