add the regeneration buff to the beacon skill

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -285,6 +285,7 @@
   "COMPONENTS__SKILLS__BEACON__BUFF__JUMP_BOOST": "Sprungverstärkung",
   "COMPONENTS__SKILLS__BEACON__BUFF__HASTE": "Eile",
   "COMPONENTS__SKILLS__BEACON__BUFF__ABSORPTION": "Absorbtion",
+  "COMPONENTS__SKILLS__BEACON__BUFF__REGENERATION": "Regeneration",
   "COMPONENTS__SKILLS__RANGED__RATE": "Feuergeschwindigkeit",
   "COMPONENTS__SKILLS__RANGED__RATE_PREFIX": "",
   "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms Verzögerung = Schüsse/Sekunde",
