--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -285,6 +285,7 @@
   "COMPONENTS__SKILLS__BEACON__BUFF__JUMP_BOOST": "Jump Boost",
   "COMPONENTS__SKILLS__BEACON__BUFF__HASTE": "Haste",
   "COMPONENTS__SKILLS__BEACON__BUFF__ABSORPTION": "Absorbtion",
+  "COMPONENTS__SKILLS__BEACON__BUFF__REGENERATION": "Regeneration",
   "COMPONENTS__SKILLS__RANGED__RATE": "Rate of fire",
   "COMPONENTS__SKILLS__RANGED__RATE_PREFIX": "",
   "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms delay = shots/second",
