add new mob types

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -328,9 +328,12 @@
   "MOB_TYPE__BLAZE": "Lohe",
   "MOB_TYPE__CAVESPIDER": "Höhlenspinne",
   "MOB_TYPE__CHICKEN": "Huhn",
+  "MOB_TYPE__COD": "Kabeljau",
   "MOB_TYPE__COW": "Kuh",
   "MOB_TYPE__CREEPER": "Creeper",
   "MOB_TYPE__DONKEY": "Maultier",
+  "MOB_TYPE__DOLPHIN": "Delfin",
+  "MOB_TYPE__DROWNED": "Ertrunkener",
   "MOB_TYPE__ELDERGUARDIAN": "Großer Wächter",
   "MOB_TYPE__ENDERDRAGON": "Enderdrache",
   "MOB_TYPE__ENDERMAN": "Enderman",
@@ -349,10 +352,13 @@
   "MOB_TYPE__MULE": "Esel",
   "MOB_TYPE__OCELOT": "Ozelot",
   "MOB_TYPE__PARROT": "Papagei",
+  "MOB_TYPE__PHANTOM": "Phantom",
   "MOB_TYPE__PIG": "Schwein",
   "MOB_TYPE__PIGZOMBIE": "Zombie-Schweinemann",
   "MOB_TYPE__POLARBEAR": "Eisbär",
+  "MOB_TYPE__PUFFERFISH": "Kugelfisch",
   "MOB_TYPE__RABBIT": "Kaninchen",
+  "MOB_TYPE__SALMON": "Lachs",
   "MOB_TYPE__SHEEP": "Schaf",
   "MOB_TYPE__SILVERFISH": "Silberfisch",
   "MOB_TYPE__SKELETON": "Skelett",
@@ -362,6 +368,8 @@
   "MOB_TYPE__SPIDER": "Spinne",
   "MOB_TYPE__SQUID": "Tintenfisch",
   "MOB_TYPE__STRAY": "Eiswanderer",
+  "MOB_TYPE__TROPICALFISH": "Tropenfisch",
+  "MOB_TYPE__TURTLE": "Schildkröte",
   "MOB_TYPE__VEX": "Plagegeist",
   "MOB_TYPE__VILLAGER": "Dorfbewohner",
   "MOB_TYPE__VINDICATOR": "Diener",
