--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -328,9 +328,12 @@
   "MOB_TYPE__BLAZE": "Blaze",
   "MOB_TYPE__CAVESPIDER": "Cave Spider",
   "MOB_TYPE__CHICKEN": "Chicken",
+  "MOB_TYPE__COD": "Cod",
   "MOB_TYPE__COW": "Cow",
   "MOB_TYPE__CREEPER": "Creeper",
+  "MOB_TYPE__DOLPHIN": "Dolphin",
   "MOB_TYPE__DONKEY": "Donkey",
+  "MOB_TYPE__DROWNED": "Drowned",
   "MOB_TYPE__ELDERGUARDIAN": "Elder Guardian",
   "MOB_TYPE__ENDERDRAGON": "Ender Dragon",
   "MOB_TYPE__ENDERMAN": "Enderman",
@@ -349,10 +352,13 @@
   "MOB_TYPE__MULE": "Mule",
   "MOB_TYPE__OCELOT": "Ocelot",
   "MOB_TYPE__PARROT": "Parrot",
+  "MOB_TYPE__PHANTOM": "Phantom",
   "MOB_TYPE__PIG": "Pig",
   "MOB_TYPE__PIGZOMBIE": "Zombie Pigman",
   "MOB_TYPE__POLARBEAR": "PolarBear",
+  "MOB_TYPE__PUFFERFISH": "Pufferfish",
   "MOB_TYPE__RABBIT": "Rabbit",
+  "MOB_TYPE__SALMON": "Salmon",
   "MOB_TYPE__SHEEP": "Sheep",
   "MOB_TYPE__SILVERFISH": "Silverfish",
   "MOB_TYPE__SKELETON": "Skeleton",
@@ -362,6 +368,8 @@
   "MOB_TYPE__SPIDER": "Spider",
   "MOB_TYPE__SQUID": "Squid",
   "MOB_TYPE__STRAY": "Stray",
+  "MOB_TYPE__TROPICALFISH": "Tropical Fish",
+  "MOB_TYPE__TURTLE": "Turtle",
   "MOB_TYPE__VEX": "Vex",
   "MOB_TYPE__VILLAGER": "Villager",
   "MOB_TYPE__VINDICATOR": "Vindicator",
