add more projectiles

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -301,6 +301,9 @@
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__FIREBALL": "Feuerball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__SNOWBALL": "Schneeball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__ARROW": "Pfeil",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__DRAGON_FIREBALL": "Drachen Feuerball",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__TRIDENT": "Dreizack",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__ENDER_PEARL": "Ender Perle",
 
   "LEVEL_RULE_EXACT": "Level: {{levels}}",
   "LEVEL_RULE_EVERY_LEVEL": "Jedes Level",
