--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -301,6 +301,9 @@
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__FIREBALL": "Fireball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__SNOWBALL": "Snowball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__ARROW": "Arrow",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__DRAGON_FIREBALL": "Dragon Fireball",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__TRIDENT": "Trident",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__ENDER_PEARL": "Ender Pearl",
 
   "LEVEL_RULE_EXACT": "Level: {{levels}}",
   "LEVEL_RULE_EVERY_LEVEL": "Every level",
