add skilltree inheritance

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -79,6 +79,9 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION_DONE": "Permission kopiert!",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT_EMPTY": "{{id}} (Permission)",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT": "Permission",
+  "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE": "Vererbung",
+  "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_NONE": "Keine Vererbung",
+  "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_SKILLTREES": "Skilltrees",
 
   "COMPONENTS__SKILLTREE_CREATOR__REDO": "Wiederherstellen",
   "COMPONENTS__SKILLTREE_CREATOR__UNDO": "Rückgängig",
