--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -79,6 +79,9 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION_DONE": "Permission copied!",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT_EMPTY": "{{id}} (Permission)",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT": "Permission",
+  "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE": "Inheritance",
+  "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_NONE": "No Inheritance",
+  "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_SKILLTREES": "Skilltrees",
 
   "COMPONENTS__SKILLTREE_CREATOR__REDO": "Redo last change",
   "COMPONENTS__SKILLTREE_CREATOR__UNDO": "Undo last change",
