add llama spit projectile to ranged skill

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -304,6 +304,7 @@
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__DRAGON_FIREBALL": "Drachen Feuerball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__TRIDENT": "Dreizack",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__ENDER_PEARL": "Ender Perle",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__LLAMA_SPIT": "Lamaspucke",
 
   "LEVEL_RULE_EXACT": "Level: {{levels}}",
   "LEVEL_RULE_EVERY_LEVEL": "Jedes Level",
