--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -304,6 +304,7 @@
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__DRAGON_FIREBALL": "Dragon Fireball",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__TRIDENT": "Trident",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__ENDER_PEARL": "Ender Pearl",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__LLAMA_SPIT": "Llama Spit",
 
   "LEVEL_RULE_EXACT": "Level: {{levels}}",
   "LEVEL_RULE_EVERY_LEVEL": "Every level",
