add skilltree requirements

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -75,10 +75,6 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__MAX_LEVEL": "Maximales Pet Level",
   "COMPONENTS__SKILLTREE_PROPERTIES__REQUIRED_LEVEL": "Benötigtes Pet Level",
   "COMPONENTS__SKILLTREE_PROPERTIES__CHANGE_ICON": "Icon anpassen",
-  "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION": "Permission in Zwischenablage kopieren",
-  "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION_DONE": "Permission kopiert!",
-  "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT_EMPTY": "{{id}} (Permission)",
-  "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT": "Permission",
   "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE": "Vererbung",
   "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_NONE": "Keine Vererbung",
   "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_SKILLTREES": "Skilltrees",
@@ -136,6 +132,23 @@
   "COMPONENTS__LEVELUP_NOTIFICATIONS__MESSAGE": "Nachricht",
   "COMPONENTS__LEVELUP_NOTIFICATIONS__DELETE": "Löschen",
   "COMPONENTS__LEVELUP_NOTIFICATIONS__INFO": "<p><span class=\"bold\">{{owner}}</span> wird mit dem Namen des Besitzers ersetzt.<br><span class=\"bold\">{{pet}}</span> wird mit dem Namen des Pet ersetzt.<br><span class=\"bold\">{{level}}</span> wird mit dem erreichten Level des Pets ersetzt.</p>",
+
+  "COMPONENTS__SKILLTREE_EDITOR__REQUIREMENTS": "Voraussetzungen",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__ADD_REQUIREMENT": "Voraussetzungen hinzufügen",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__DELETE": "Löschen",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TYPE": "Typ der Vorraussetzung",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_PERMISSION": "Permission",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_CUSTOM": "Benutzerdefiniert",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_NOSKILLTREE": "Kein Skilltree",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_SKILLTREE": "Skilltree",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__PERMISSION__COPY": "Permission in Zwischenablage kopieren",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__PERMISSION__COPY_DONE": "Permission kopiert!",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__PERMISSION__INPUT": "Permission",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__PERMISSION__ERROR_NO_WHITESPACES": "Die Permission darf keine Leerzeichen enthalten!",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__CUSTOM__NAME": "Vorraussetzungsname",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__CUSTOM__VALUE": "Vorraussetzungseinstellungen",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__SKILLTREE__SELECT": "Skilltree",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__SKILLTREE__SKILLTREE": "Skilltrees",
 
   "COMPONENTS__SKILLS__DELETE": "Löschen",
   "COMPONENTS__SKILLS__YES": "Ja",
