--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,10 +75,6 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__MAX_LEVEL": "Maximum pet level",
   "COMPONENTS__SKILLTREE_PROPERTIES__REQUIRED_LEVEL": "Required pet level",
   "COMPONENTS__SKILLTREE_PROPERTIES__CHANGE_ICON": "Change Icon",
-  "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION": "Copy permission to clipboard",
-  "COMPONENTS__SKILLTREE_PROPERTIES__COPY_PERMISSION_DONE": "Permission copied!",
-  "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT_EMPTY": "{{id}} (Permission)",
-  "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT": "Permission",
   "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE": "Inheritance",
   "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_NONE": "No Inheritance",
   "COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_SKILLTREES": "Skilltrees",
@@ -136,6 +132,23 @@
   "COMPONENTS__LEVELUP_NOTIFICATIONS__MESSAGE": "Message",
   "COMPONENTS__LEVELUP_NOTIFICATIONS__DELETE": "Delete",
   "COMPONENTS__LEVELUP_NOTIFICATIONS__INFO": "<p><span class=\"bold\">{{owner}}</span> will be replaced by the name of the owner.<br><span class=\"bold\">{{pet}}</span> will be replaced by the name of the pet.<br><span class=\"bold\">{{level}}</span> will be replaced by the new level of the pet.</p>",
+
+  "COMPONENTS__SKILLTREE_EDITOR__REQUIREMENTS": "Requirements",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__ADD_REQUIREMENT": "Add Requirement",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__DELETE": "Delete",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TYPE": "Requirement Type",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_PERMISSION": "Permission",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_CUSTOM": "Custom",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_NOSKILLTREE": "No Skilltree",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__TITLE_SKILLTREE": "Skilltree",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__COPY_PERMISSION": "Copy permission to clipboard",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__COPY_PERMISSION_DONE": "Permission copied!",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__PERMISSION__ERROR_NO_WHITESPACES": "The Permission cannot contain any whitespaces!",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__PERMISSION__INPUT": "Permission",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__CUSTOM__NAME": "Requirement Name",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__CUSTOM__VALUE": "Requirement Value",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__SKILLTREE__SELECT": "Skilltree",
+  "COMPONENTS__SKILLTREE_REQUIREMENTS__SKILLTREE__SKILLTREE": "Skilltrees",
 
   "COMPONENTS__SKILLS__DELETE": "Delete",
   "COMPONENTS__SKILLS__YES": "Yes",
